fix(DatePicker): Fix layout problem.

--- a/src/date-picker/style/datepicker.less
+++ b/src/date-picker/style/datepicker.less
@@ -130,6 +130,11 @@
     min-height: 10px;
     line-height: 26px;
     padding: 0 5px;
+    &:after {
+      content: '';
+      display: block;
+      clear: both;
+    }
   }
   &-mode-select {
     background: #f5f5f5;
